Fix overflow issue

--- a/_assets/sass/include/_layout.sass
+++ b/_assets/sass/include/_layout.sass
@@ -2,7 +2,6 @@ html
 	margin: 60px
 
 body
-	overflow: hidden
 	margin: 0 auto
 	max-width: 600px
 	color: $body
